# searxng-rs

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  README.md
.github/workflows/: ci.yml  container.yml
src/: lib.rs  main.rs
src/autocomplete/: backends.rs  mod.rs
src/cache/: mod.rs
src/config/: mod.rs  settings.rs
src/engines/: arxiv.rs  bing.rs  brave.rs  duckduckgo.rs  github.rs  google.rs  loader.rs  mod.rs  registry.rs  stackoverflow.rs  traits.rs  wikipedia.rs  youtube.rs
src/locales/: mod.rs
src/metrics/: mod.rs
src/network/: client.rs  mod.rs  user_agent.rs
src/plugins/: calculator.rs  hash_plugin.rs  mod.rs  registry.rs  tracker_remover.rs  traits.rs  unit_converter.rs
src/query/: mod.rs
src/results/: container.rs  mod.rs  types.rs
src/search/: executor.rs  mod.rs  models.rs
src/templates/: about.html  base.html  index.html  preferences.html  search.html  stats.html
src/templates/components/: answer.html  infobox.html  pagination.html  result.html
src/web/: handlers.rs  mod.rs  routes.rs  state.rs  templates.rs
