[package]
name = "searxng-rs"
version = "0.1.0"
edition = "2021"
authors = ["SearXNG-RS Contributors"]
description = "A privacy-respecting metasearch engine written in Rust"
license = "AGPL-3.0"
repository = "https://github.com/searxng/searxng-rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTML/XML parsing
scraper = "0.18"
select = "0.6"

# Template engine
tera = "1.19"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
url = "2.5"
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
urlencoding = "2.1"
md5 = "0.7"
dirs = "5.0"

# Rate limiting
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

# Internationalization
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
